--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <h2>Hello World</h2>
     <header class="header">
       <form class="search-form" id="search-form">
         <input
